# credit-fraud

./: .gitignore  README.md  main.py  makefile  pyproject.toml
.github/workflows/: test.yml
notebooks/: data_exploration.ipynb  post_processing_exploratory.ipynb
src/: config.py  dataset_pipeline.py  factory.py  main.py  models_pipeline.py  pipeline.py
src/balancers/: balancer.py  oversampling_balancer.py
src/domain/: evaluation_result.py
src/features/: amount_aggregation_feature.py  amount_bin_feature.py  amount_log_feature.py  amount_percentile_feature.py  feature.py  hour_of_day_feature.py  is_night_feature.py  time_hours_feature.py  time_since_previous_feature.py  transaction_frequency_feature.py
src/models/: lightgbm_model.py  model_protocol.py  xgboost_model.py
src/utils/: data_utils.py  file_system_utils.py  filesystem_utils.py
tests/__fixtures__/: dataset.json  fake_dataset.csv
tests/acceptance/: test_config.py  test_load_dataset.py
tests/integration/: test_pipeline.py
tests/unit/: test_amount_aggregation_feature.py  test_amount_bin_feature.py  test_amount_log_feature.py  test_amount_percentile_feature.py  test_data_utils.py  test_hour_of_day_feature.py  test_is_night_feature.py  test_lightgbm_model.py  test_oversampling_balancer.py  test_time_hours_feature.py  test_time_since_previous_feature.py  test_transaction_frequency_feature.py
tests/unit/utils/: test_data_utils.py
