[project]
name = "fraud-dect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.1",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "tests"
]
markers = [
  "acceptance: acceptance tests only on local"
]
